# learning_sdl2

./: CMakeLists.txt
src/: main.c  main.cpp
